--- a/style.css
+++ b/style.css
@@ -33,8 +33,7 @@
 
 .box-contet {
     width: 552px;
-    height: 467px;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
@@ -154,6 +153,10 @@
 
 @media (min-width: 320px) and (max-width: 767px) {
     .box-contet {
-        width: 425px;
+        width: 375px;
+    }
+
+    .container {
+        max-width: 216px;
     }
 }
